--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">LiveDataWithViewModelDemo</string>
+
+    <string name="text_simple">简单用法</string>
 </resources>
